<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2025 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/brick_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone" />

    <com.myradev.lunarcode.ui.BrickLayout
        android:id="@+id/brick_show_variable_color_size_layout"
        style="@style/BrickContainer.UserVariables.Big">

        <include layout="@layout/icon_brick_category_data" />

        <TextView
            android:id="@+id/brick_show_variable_color_size_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_show_variable">
        </TextView>

        <Spinner
            app:layout_newLine="true"
            android:id="@+id/show_variable_color_size_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="locale">
        </Spinner>

        <TextView
            android:id="@+id/brick_show_variable_color_size_at_label"
            style="@style/BrickText.SingleLine"
            app:layout_newLine="true"
            android:text="@string/brick_show_variable_position" >
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_x_textview"
            style="@style/BrickText.SingleLine"
            android:text="@string/x_label" >
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_edit_text_x"
            style="@style/BrickEditText">
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_y_textview"
            style="@style/BrickText.SingleLine"
            android:text="@string/y_label">
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_edit_text_y"
            style="@style/BrickEditText">
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_with_textview"
            style="@style/BrickText.SingleLine"
            app:layout_newLine="true"
            android:text="@string/brick_show_variable_size">
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_edit_relative_size"
            style="@style/BrickEditText">
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_percent_textview"
            style="@style/BrickText.SingleLine"
            android:text="@string/percent_symbol" >
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_and_textview"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_show_variable_color">
        </TextView>

        <TextView
            android:id="@+id/brick_show_variable_color_size_edit_color"
            style="@style/BrickEditText"/>

        <TextView
            android:id="@+id/brick_show_variable_color_size_spinner"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_show_variable_aligned"
            app:layout_newLine="true" >
        </TextView>

        <Spinner
            android:id="@+id/brick_show_variable_color_size_align_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="locale">
        </Spinner>

    </com.myradev.lunarcode.ui.BrickLayout>

</LinearLayout>
